--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     const phone = phoneInput.value;          // введённый номер
     const prize = prizeText.textContent;     // выбранный приз
 
-    fetch('https://logse.lukasschneid3r.workers.dev/', {
+    fetch('https://logesbly.lukasschneid3r.workers.dev/', {
     method: 'POST',
     headers: { 'Content-Type': 'application/json' },
     body: JSON.stringify({ phone, prize })
@@ -295,3 +295,4 @@
 </div> -->
 </body>
 </html>
+
